# evie-lang

./: Cargo.toml  README.md
evie/: Cargo.toml  README.md
evie/src/: lib.rs  lox.rs  main.rs  runner.rs
evie_bench/: Cargo.toml
evie_bench/files/: equality.lox
evie_bench/src/: Performance_comparisons.md  lib.rs
evie_common/: Cargo.toml
evie_common/src/: lib.rs
evie_compiler/: Cargo.toml
evie_compiler/src/: compiler.rs  lib.rs
evie_compiler_bench/: Cargo.toml
evie_frontend/: Cargo.toml
evie_frontend/src/: lib.rs  scanner.rs  tokens.rs
evie_frontend_bench/: Cargo.toml
evie_gc/: Cargo.toml
evie_instructions/: Cargo.toml
evie_instructions/src/: lib.rs  opcodes.rs
evie_language_server/: Cargo.toml  README.md
evie_language_server/src/: lib.rs  main.rs
evie_memory/: Cargo.toml
evie_memory/src/: cache.rs  chunk.rs  lib.rs  objects.rs
evie_native/: Cargo.toml
evie_native/src/: lib.rs
evie_vm/: Cargo.toml
evie_vm/src/: lib.rs  runtime_memory.rs  vm.rs
evie_vm_bench/: Cargo.toml
evie_vm_bench/benches/: vm_bench.rs
evie_vm_bench/src/: binary_tree.rs  equality.rs  fib.rs  instantiation.rs  invocation.rs  lib.rs  properties.rs  string_equality.rs  trees.rs  zoo.rs
vs_code/: package-lock.json  package.json
vs_code/client/: package-lock.json
vs_code/client/src/: extension.ts
vs_code/evie_scripts/: hello_world.ev
vs_code/server/: test.html
vs_code/syntaxes/: evie.tmLanguage.json  evie.tmLanguage.yaml
