[workspace]
members = [
  "evie_frontend_bench",
  "evie_vm_bench",
  "evie_compiler_bench",
  "evie_vm",
  "evie_frontend",
  "evie_gc",
  "evie_native",
  "evie_compiler",
  "evie",
]

default-members = [
  "evie_vm",
  "evie_frontend",
  "evie_gc",
  "evie_native",
  "evie_compiler",
  "evie",
]

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = "fat"
opt-level = 3
