[workspace]
members = [
  "evie_common",
  "evie_frontend_bench",
  "evie_vm_bench",
  "evie_bench",
  "evie_compiler_bench",
  "evie_vm",
  "evie_frontend",
  "evie_memory",
  "evie_native",
  "evie_compiler",
  "evie_instructions",
  "evie_language_server",
  "evie",
]

default-members = [
  "evie_instructions",
  "evie_vm",
  "evie_frontend",
  "evie_memory",
  "evie_native",
  "evie_compiler",
  "evie",
  "evie_common",
]

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = "fat"
opt-level = 3
