[package]
edition = "2021"
name = "evie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evie_common = {path = "../evie_common"}
evie_native = {path = "../evie_native"}
evie_vm = {path = "../evie_vm"}
[features]
trace_enabled = ["evie_vm/trace_enabled", "evie_native/trace_enabled"]
