[package]
edition = "2021"
name = "evie_compiler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evie_common = {path = "../evie_common"}
evie_frontend = {path = "../evie_frontend"}
evie_instructions = {path = "../evie_instructions"}
evie_memory = {path = "../evie_memory"}
num_enum = "0.5.4"

[features]
nan_boxed = ["evie_instructions/nan_boxed", "evie_memory/nan_boxed"]
trace_enabled = ["evie_memory/trace_enabled"]
