[package]
edition = "2021"
name = "evie_vm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evie_common = {path = "../evie_common"}
evie_compiler = {path = "../evie_compiler"}
evie_frontend = {path = "../evie_frontend"}
evie_instructions = {path = "../evie_instructions"}
evie_memory = {path = "../evie_memory"}
evie_native = {path = "../evie_native"}
rustc-hash = "1.1.0"

[dev-dependencies]
ctor = "0.1.21"

[features]
nan_boxed = ["evie_memory/nan_boxed", "evie_compiler/nan_boxed", "evie_instructions/nan_boxed", "evie_native/nan_boxed"]
trace_enabled = ["evie_memory/trace_enabled", "evie_frontend/trace_enabled", "evie_compiler/trace_enabled", "evie_native/trace_enabled"]
